--- a/style.css
+++ b/style.css
@@ -15,7 +15,12 @@ main {
   display: flex;
   align-items: center;
   height: 65px;
-  background: linear-gradient(90deg, #672280 1.18%, #a626d3 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 24%,
+    rgba(0, 212, 255, 1) 100%
+  );
   color: white;
   padding: 20px;
 }
@@ -30,10 +35,10 @@ main {
   margin-right: auto;
 }
 
-.header--project {
+/* .header--project {
   font-size: 0.75rem;
   font-weight: 500;
-}
+} */
 
 .form {
   display: grid;
@@ -53,7 +58,12 @@ main {
   grid-column: 1 / -1;
   font-family: "Karla", sans-serif;
   border-radius: 5px;
-  background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(9, 9, 121, 1) 24%,
+    rgba(0, 212, 255, 1) 100%
+  );
   color: white;
   border: none;
   cursor: pointer;
@@ -66,6 +76,7 @@ main {
 
 .meme--image {
   max-width: 100%;
+  max-height: 80vh;
   margin-left: auto;
   margin-right: auto;
   border-radius: 3px;
